package cl.icel.pasteleria;

public class Boleta {
}
