package cl.icel.pasteleria;

public class DetalleBoleta {
}
