package cl.icel.pasteleria;

public class Pastel {
}
