@startuml
skin rose
left to right direction

class Usuario{
    - Id: String
    - Nombre: String
    - RUT: String
    - Correo: String
    - Semestre: int
    - Rol: String
    - Clave: String

    + getId(): String
    + getNombre(): String
    + getRUT(): String
    + getCorreo(): String
    + getSemestre(): int
    + getRol(): String
    + getClave(): String
}

class Pastel{
    - IdPastel: String
    - Nombre: String
    - Porciones: int
    - Precio: int
    - Stock: int
    - FechaCaducidad: Date

    + getId(): String
    + getNombre(): String
    + getPorciones(): int
    + getPrecio(): int
    + getStock(): int
    + getFechaCaducidad(): Date
}

class Ingrediente{
    - Nombre: String
    - Cantidad: double
    - UnidadMedida: String

    + getNombre(): String
    + getCantidad(): double
    + getUnidadMedida(): String
}
class Pasteleria{
    - Nombre: String

    + getNombre(): String
}
class Boleta{
    - UUID: String
    - NombreVendedor: String
    - FechaDeVenta: Date
    - Total: int

    + getUUID(): String
    + getNombreVendedor(): String
    + getFechaDeVenta(): LocalDate
    + getTotal(): int
    }
class DetalleBoleta{
    - PastelVendido: Pastel
    - Cantidad: int
    - subTotal: int

    + getPastelVendido(): pastel
    + getCantidad(): int
    + getSubTotal(): int

}
interface SistemaPasteleria <<interface>>{
    + cargarUsuarios(ruta: String): boolean
    + cargarPasteles(ruta: String): boolean
    + iniciarSesion(rut: String, clave: String): Usuario
    + agregarUsuario(usuario: Usuario): void
    + eliminarUsuario(id: String): void
    + registrarPastel(pastel: Pastel): void
    + eliminarPastel(id: String): void
    + verificarEliminacionAutomatica(): void
    + historialVentas(): List<Boleta>
    + generarBoleta(vendedor: Usuario, productosAVender: Map<String, Integer>): Boleta
}
class SistemaPasteleriaIMpl{
    - usuarios: Map<String, Usuario>
    - pasteles: Map<String, Pastel>
    - historialBoletas: Map<String, Boleta>
}
SistemaPasteleriaIMpl ..|> SistemaPasteleria: <<implements>>
SistemaPasteleriaIMpl *-- Usuario
SistemaPasteleriaIMpl *-- Pastel
SistemaPasteleriaIMpl *-- Boleta
Boleta *-- DetalleBoleta: contiene
DetalleBoleta --> Pastel: vende
Pastel *-- Ingrediente: contiene
Pastel *-- Pasteleria: vende
Usuario *-- Boleta: emite
@enduml